--- a/library.properties
+++ b/library.properties
@@ -1,4 +1,4 @@
-name=SimpleDelegate
+name=SimpleDelegation
 version=1.0.0
 author=Alain Rohrbach <nerovia@icloud.com>
 maintainer=Alain Rohrbach <nerovia@icloud.com>
